samples/_failures_safe/1761534650_bc9841_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2571b80a.c: In function ‘main’:
./samples/SAFE/__tmp_2571b80a.c:155:5: error: expected declaration or statement at end of input
  155 |     destroy_matrix(&transposed_a);
      |     ^~~~~~~~~~~~~~
